--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,3 +4,9 @@ slf4j-api = "org.slf4j:slf4j-api:2.0.9"
 
 kotlinx-coroutines-core = "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3"
 kotlinx-coroutines-test = "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.3"
+
+netty-platform = { module = "io.netty:netty-bom", version.ref = "netty" }
+
+[versions]
+netty = "4.1.101.Final"
+
