--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.9.21' apply false
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.9.21' apply false
 }
 
 import org.jetbrains.kotlin.gradle.dsl.KotlinProjectExtension
