--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,9 +4,13 @@ slf4j-api = "org.slf4j:slf4j-api:2.0.9"
 
 kotlinx-coroutines-core = "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3"
 kotlinx-coroutines-test = "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.3"
+kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
 
 netty-platform = { module = "io.netty:netty-bom", version.ref = "netty" }
 
+gson = "com.google.code.gson:gson:2.10.1"
+
 [versions]
 netty = "4.1.101.Final"
+kotlinx-serialization = "1.6.2"
 
