--- a/hukwink-util/build.gradle
+++ b/hukwink-util/build.gradle
@@ -4,6 +4,7 @@ plugins {
 
 dependencies {
     api libs.kotlinx.coroutines.core
+    compileOnly libs.kotlinx.serialization.json
 
     api "org.jetbrains.kotlin:kotlin-reflect"
 }
